--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@ body {
     background-color: white;
     color: black;
     font-family: "Courier new", Courier, monospace;
-    text-align: justify;
+    text-align: left;
 }
 header {
     background-color: white;
@@ -26,6 +26,7 @@ h3 {
 }
 p {
     text-align: justify;
+    hyphens: auto;
 }
 a {
     color: black;
@@ -38,6 +39,8 @@ a:hover {
 }
 .container {
     padding: 20px 0;
+    padding-left: 20px;
+    padding-right: 20px;
     /* padding-left: 10%; */
     /* padding-right: 10%; */
     text-align: left;
