--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,6 @@ header {
     background-color: white;
     color: black;
     text-align: left;
-    margin-top: 20px;
 }
 h1, h2, h3 {
     font-family: "Helvetica", sans-seric;
@@ -43,6 +42,15 @@ a:hover {
     /* padding-left: 10%; */
     /* padding-right: 10%; */
     text-align: left;
+}
+.title {
+    font-size: 80px;
+    font-weight: bold;
+    margin-top: 20px;
+}
+.subtitle {
+    font-size: 50px;
+    font-weight: bold;
 }
 .multiline {
     white-space: pre-wrap;
