--- a/css/styles.css
+++ b/css/styles.css
@@ -47,6 +47,7 @@ a:hover {
     font-size: 80px;
     font-weight: bold;
     margin-top: 20px;
+    line-height: 0.7;
 }
 .subtitle {
     font-size: 50px;
