--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,6 @@ h2 {
 }
 h3 {
     font-weight: bold;
-    font-style: italic;
     font-size: 20px;
     text-decoration: underline;
 
@@ -140,13 +139,12 @@ a:hover {
 }
 .tag {
     font-size: 12px;
-    font-style: normal;
     display: inline-block;
     padding: 5px 10px;
-    border-radius: 10px;
+    border-radius: 8px;
     margin-top: 10px;
-    background-color: #333; /* Blackish background */
-    color: #fff; /* Whitish font color */
+    background-color: #333;
+    color: #fff;
 }
 .tag-container {
     display: inline-block;
