--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,19 @@
 body {
+    margin: 0;
     background-color: white;
     color: black;
     font-family: "Courier new", Courier, monospace;
     text-align: left;
+}
+canvas {
+  width: 100vw;
+  height: 100vh;
+  display: block;
+  background-color: white;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: -9999;
 }
 header {
     background-color: white;
