--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,7 @@ canvas {
   z-index: -9999;
 }
 header {
-    background-color: white;
+    /*background-color: white;*/
     color: black;
     text-align: left;
 }
